# nemesis

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: datacollator.py  dataset.py  loss.py  memory.py  model.py  trainer.py  utils.py
src/config/: config.yaml  zero.json
src/config/trainer/: default.yaml  zero.json
