[project]
name = "blade2blade"
description = "Adversarial Training and SFT for Bot Safety Models"
version = "0.0.1"
authors = [
    { name = "LAION-AI", email = "contact@laion.ai" }
]
readme = "README.md"
dependencies = [
    "datasets>=2.11.0",
    "torch>=2.0.0",
    "transformers>=4.27.4",
    "hydra-core>=1.3.2",
    "tokenizers>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "wandb>=0.14.0",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
