[project]
name = "Reward-Model"
description = "Reward Model training for LLM alignment"
version = "0.0.1"
authors = [
    { name = "Exploding gradients", email = "shahules786@gmail.com" }
]
readme = "README.md"
dependencies = [
    "datasets>=2.11.0",
    "torch>=2.0.0",
    "transformers>=4.27.4",
    "hydra-core>=1.3.2",
    "tokenizers>=0.13.2",
    "wandb>=0.14.0",

]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
